-- Copyright 2018 Google LLC
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     https://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                async-await-monad
version:             0.1.0.0
synopsis:            Async/await implementation as a monad
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Petr Pudlak
maintainer:          pudlak@google.com
copyright:           Google LLC
category:            Control
build-type:          Simple
extra-source-files:  CONTRIBUTING.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Async, Schedulers
  -- other-modules:
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  Ghc-Options:         -Wall

Test-Suite test-async-await-monad
  type:                exitcode-stdio-1.0
  main-is:             Async_test.hs
  build-depends:       async-await-monad, base, HUnit, mtl, test-framework,
                       test-framework-hunit
  hs-source-dirs:      test
  default-language:    Haskell2010
  Ghc-Options:         -Wall
